--- a/pluto.ini
+++ b/pluto.ini
@@ -19,7 +19,7 @@ Fill_ratio       0.75
 
 CFL              0.4
 CFL_max_var      1.1
-tstop            1.1
+tstop            1.3
 first_dt         1.e-4
 
 [Solver]
@@ -38,6 +38,7 @@ X3-end        outflow
 [Static Grid Output]
 
 uservar    1    T
+output_dir ./Out
 dbl       -1.0  -1   single_file
 flt       -1.0  -1   single_file
 vtk       -1.0  -1   single_file
@@ -47,6 +48,7 @@ tab       -1.0  -1
 ppm       -1.0  -1   
 png       -1.0  -1
 log        1
+log_dir    ./Log_Files
 analysis  0.001  -1
 
 [Chombo HDF5 output]
